refactor(Database): use toList